--- a/src/components/Input/input.css
+++ b/src/components/Input/input.css
@@ -39,7 +39,7 @@
     position: relative;
     z-index: 2;
     display: block;
-    transform: translateY(-53px);
+    transform: translateY(-46px);
     transition: transform 0.3s;
 }
 
@@ -62,7 +62,7 @@
     position: relative;
     display: block;
     margin-left: 2%;
-    transform: translateY(-40px);
+    transform: translateY(-35px);
     font-size:1.2rem;
     font-weight: 700;
     letter-spacing: 0.5px;
@@ -76,5 +76,5 @@
     margin: 0 0 0 auto;
     min-height: 40px;
     height: 50px;
-    transform: translateY(-76px);
+    transform:translateY(-69px);
 }
